# modern-cpp

./: .clang-format  .gitignore  README.md
effective-modern-cpp/: README.md
effective-modern-cpp/item-1-understand-template-type-deduction/: README.md  main.cc
effective-modern-cpp/item-10-prefer-scoped-enums-to-unscoped-enums/: README.md
effective-modern-cpp/item-11-prefer-deleted-functions-to-private-undefined-ones/: README.md  delete_normal_functions.cc  delete_template_instantiations.cc
effective-modern-cpp/item-12-declare-overriding-functions-override/: README.md  member-function-reference-qualifiers.cc
effective-modern-cpp/item-13-prefer-const_iterators-to-iterators/: README.md  const_iterator_test.cc
effective-modern-cpp/item-14-declare-functions-noexcept-if-they-wont-emit-exceptions/: README.md
effective-modern-cpp/item-15-use-constexpr-whenever-possible/: README.md  point.cc  pow.cc
effective-modern-cpp/item-16-make-const-member-functions-thread-safe/: README.md
effective-modern-cpp/item-17-understand-special-member-function-generation/: README.md
effective-modern-cpp/item-2-understand-auto-type-deduction/: README.md
effective-modern-cpp/item-3-understand-decltype/: README.md
effective-modern-cpp/item-4-know-how-to-view-deduced-types/: README.md  compiler_diagnostics.cc  compiler_diagnostics.hpp  complex_sample.cc  (+1 more)
misc/asyncio/io_uring-echo-server/: CMakeLists.txt  README.md  main.cc  tcp_server.cc  tcp_server.h
misc/asyncio/io_uring_echo_server/: CMakeLists.txt  main.cc  tcp_server.cc  tcp_server.h
understanding-cpp11/: README.md
(+32 files in other folders)
